Fixed the overflow of services section

--- a/css/style.css
+++ b/css/style.css
@@ -1620,8 +1620,9 @@ h2.resp-accordion {
 	}
 
 	.services-header p {
-		height: 66px;
-		overflow: hidden;
+		height: 50%;
+		margin: auto 5%;
+		/* overflow: hidden; */
 	}
 
 	.services-grid h4 {
